add expand all and collapse all functionality